--- a/style.css
+++ b/style.css
@@ -61,9 +61,11 @@ body {
     width: 25%;
     height: 100%;
     flex-direction: column;
-    align-self: flex-start;
     align-items: center;
     justify-content: space-around;
+    border: ridge 4px;
+    border-radius: 20px;
+    background-color: rgb(88, 212, 136);
 }
 .foto {
     margin-top: 15px;
@@ -75,13 +77,14 @@ body {
 .info {
     margin: 20px 0 0 0;
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     width: 40%;
     height: 40%;
     border: ridge 4px;
-    border-radius: 30px;
+    border-radius: 20px;
     align-items: center;
     justify-content: space-around;
+    background-color: whitesmoke;
 }
 .atributos {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
