--- a/style.css
+++ b/style.css
@@ -4,18 +4,20 @@
     box-sizing: border-box;
     text-decoration: none;
 }
-body {
+:root {
+    --main-bg-color: rgb(158, 188, 197);
+    --buttons-bg-color: rgb(88, 212, 136);
+    --main-text-color: black;
+}
+#mainBody {
     width: 100%;
     min-height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    background-color: rgb(158, 188, 197);
-}
-.dark-mode {
-    background-color: rgb(22, 22, 22);
-    color: rgb(212, 212, 212);
+    background-color: var(--main-bg-color);
+    color: var(--main-text-color);
 }
 .container {
     display: flex;
@@ -24,6 +26,11 @@ body {
     height: 100vh;
     flex-direction: column;
     align-items: center;
+}
+.buttons {
+    cursor: pointer;
+    border: solid 2px black;
+    background-color: rgb(88, 212, 136);
 }
 .login {
     display: flex;
@@ -48,7 +55,7 @@ body {
     margin: 20px 0 0 0;
     width: 108px;
 }
-.entrar {
+#entrar {
     width: 110px;
     height: 50px;
     border-radius: 40px;
@@ -84,8 +91,17 @@ body {
     border-radius: 20px;
     align-items: center;
     justify-content: space-around;
-    background-color: whitesmoke;
+    background-color: var(--main-bg-color);
 }
 .atributos {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.darkMode {
+    margin-top: 30px;
+    align-content: center;
+}
+#darkMode {
+    height: 30px;
+    width: 90px;
+    border-radius: 30px;
 }
